--- a/public/ankieta.html
+++ b/public/ankieta.html
@@ -385,14 +385,6 @@ html, body {
 /* ── ADMIN SCREEN ── */
 .admin-scroll { flex: 1; overflow-y: auto; padding: 16px 16px 80px; }
 
-.admin-section-label {
-  font-family: 'JetBrains Mono', monospace;
-  font-size: 10px;
-  color: var(--muted);
-  margin-bottom: 10px;
-  padding-bottom: 8px;
-  border-bottom: 1px solid var(--line);
-}
 
 .admin-dl-all {
   display: flex;
@@ -414,24 +406,6 @@ html, body {
 }
 .admin-dl-all:hover { background: #333; }
 
-.admin-dl-excel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  width: 100%;
-  padding: 13px;
-  background: none;
-  color: var(--green);
-  border: 1px solid var(--green);
-  border-radius: var(--r);
-  font-family: 'Inter', sans-serif;
-  font-size: 13px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.1s;
-}
-.admin-dl-excel:hover { background: var(--sel-bg); }
 
 .admin-toolbar { display: flex; gap: 8px; margin-bottom: 10px; }
 
@@ -531,7 +505,6 @@ html, body {
 @keyframes spin { to { transform: rotate(360deg); } }
 
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.2/sql-wasm.js"></script>
 </head>
 <body>
 
@@ -603,9 +576,6 @@ html, body {
   </div>
   <div class="admin-scroll">
 
-    <!-- SECTION A: .docx from server -->
-    <div class="admin-section-label">Kwestionariusze (.docx) — z serwera</div>
-
     <button class="admin-dl-all" onclick="downloadAll()">Pobierz wszystkie (.zip)</button>
 
     <div class="admin-toolbar">
@@ -615,13 +585,6 @@ html, body {
 
     <div class="response-list" id="response-list">
       <div class="admin-empty">Ładowanie...</div>
-    </div>
-
-    <!-- SECTION B: SQLite from local storage -->
-    <div class="admin-section-label" style="margin-top:28px">Dane (.sqlite) — lokalnie</div>
-    <button class="admin-dl-excel" onclick="exportSQLite()">Eksportuj dane do SQLite</button>
-    <div style="font-family:'JetBrains Mono',monospace;font-size:10px;color:var(--muted);margin-top:6px;text-align:center">
-      Eksportuje odpowiedzi zapisane w tej przeglądarce
     </div>
 
   </div>
@@ -1050,7 +1013,7 @@ function renderForm() {
     block.className = 'q-block' + (isConditional ? ' hidden' : '');
     block.id = 'qblock_' + q.key;
 
-    const condTag = isConditional ? `<span class="cond-tag">warunkowe</span>` : '';
+    const condTag = isConditional ? `<span class="cond-tag">⚡ warunkowe</span>` : '';
     const maxTag = q.maxSelect ? `<span class="cond-tag" style="color:#555;border-color:#ccc;background:#f5f5f5">max ${q.maxSelect}</span>` : '';
 
     block.innerHTML = `
@@ -1265,9 +1228,17 @@ function updateProgress() {
   document.getElementById('progress-bar').style.width = pct + '%';
 }
 
-function updateRespCount() {
-  document.getElementById('resp-count').textContent =
-    responses.length + ' ' + plural(responses.length, 'wypełnienie', 'wypełnienia', 'wypełnień');
+async function updateRespCount() {
+  try {
+    const r = await fetch(BACKEND_URL + '/api/responses');
+    if (!r.ok) return;
+    const data = await r.json();
+    const n = data.total ?? (data.items || []).length;
+    document.getElementById('resp-count').textContent =
+      n + ' ' + plural(n, 'wypełnienie', 'wypełnienia', 'wypełnień');
+  } catch(e) {
+    // silently ignore if no connection
+  }
 }
 
 function plural(n, a, b, c) {
@@ -1312,7 +1283,7 @@ function submitForm() {
     body: JSON.stringify(record),
   })
   .then(r => r.ok ? r.json() : Promise.reject(r.status))
-  .then(data => console.log('Saved to backend, db_id:', data.db_id))
+  .then(data => { console.log('Saved to backend, db_id:', data.db_id); updateRespCount(); })
   .catch(err => console.warn('Backend unavailable, saved locally only:', err));
 
   document.getElementById('thanks-sub').textContent = 'Wypełnienie #' + responses.length + ' zapisane';
@@ -1353,36 +1324,23 @@ async function loadAdmin() {
       adminItems.length + ' ' + plural(adminItems.length, 'wypełnienie', 'wypełnienia', 'wypełnień');
     renderAdminList();
   } catch(e) {
-    // Backend unavailable — fall back to locally stored responses
-    if (responses.length) {
-      adminItems = responses.map(r => ({ id: r.id, ts: r.ts, created: r.ts }));
-      document.getElementById('admin-total').textContent =
-        adminItems.length + ' ' + plural(adminItems.length, 'wypełnienie', 'wypełnienia', 'wypełnień') + ' (lokalnie)';
-      renderAdminList(true);
-    } else {
-      list.innerHTML = '<div class="admin-empty">Brak danych lokalnych</div>';
-    }
+    list.innerHTML = '<div class="admin-empty">Błąd połączenia z serwerem</div>';
   }
 }
 
-function renderAdminList(localMode = false) {
+function renderAdminList() {
   const list = document.getElementById('response-list');
   if (!adminItems.length) {
     list.innerHTML = '<div class="admin-empty">Brak wypełnień</div>';
     return;
   }
-  // Hide docx download controls when no server available
-  document.querySelector('.admin-dl-all').style.display = localMode ? 'none' : '';
-  document.querySelector('.admin-toolbar').style.display = localMode ? 'none' : '';
-  document.querySelector('.admin-section-label').textContent = localMode
-    ? 'Wypełnienia — lokalnie (brak serwera)'
-    : 'Kwestionariusze (.docx) — z serwera';
+  document.querySelector('.admin-dl-all').style.display = '';
+  document.querySelector('.admin-toolbar').style.display = '';
 
   list.innerHTML = adminItems.map(item => {
     const date = item.ts ? new Date(item.ts).toLocaleString('pl-PL') : (item.created || '—');
     const checked = selected.has(item.id) ? 'checked' : '';
     const selectedCls = selected.has(item.id) ? 'is-selected' : '';
-    const actionBtn = localMode ? '' : `<button class="dl-one-btn" onclick="downloadOne(${item.id})">.docx</button>`;
     return `
     <div class="response-item ${selectedCls}" id="ri_${item.id}">
       <div class="response-item-check ${checked}" onclick="toggleSelect(${item.id})">
@@ -1392,7 +1350,9 @@ function renderAdminList(localMode = false) {
         <div class="response-item-id">#${String(item.id).padStart(4,'0')}</div>
         <div class="response-item-ts">${date}</div>
       </div>
-      <div class="response-item-actions">${actionBtn}</div>
+      <div class="response-item-actions">
+        <button class="dl-one-btn" onclick="downloadOne(${item.id})">.docx</button>
+      </div>
     </div>`;
   }).join('');
 }
@@ -1526,41 +1486,6 @@ function renderStats() {
 //  EXPORT
 // ════════════════════════════════════════════════════════
 
-async function exportSQLite() {
-  if (!responses.length) { toast('Brak danych lokalnych'); return; }
-  toast('Generowanie bazy…');
-
-  const SQL = await initSqlJs({
-    locateFile: f => `https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.2/${f}`
-  });
-  const db = new SQL.Database();
-
-  db.run(`CREATE TABLE IF NOT EXISTS responses (
-    id      INTEGER PRIMARY KEY,
-    ext_id  TEXT,
-    ts      TEXT,
-    created TEXT,
-    answers TEXT
-  )`);
-
-  const stmt = db.prepare(
-    'INSERT INTO responses (id, ext_id, ts, created, answers) VALUES (?,?,?,?,?)'
-  );
-  responses.forEach(r => {
-    stmt.run([r.id, r.id, r.ts, r.ts, JSON.stringify(r.answers)]);
-  });
-  stmt.free();
-
-  const bytes = db.export();
-  const blob  = new Blob([bytes], { type: 'application/x-sqlite3' });
-  const a     = document.createElement('a');
-  a.href      = URL.createObjectURL(blob);
-  a.download  = 'kwestionariusz_' + new Date().toISOString().slice(0, 10) + '.sqlite';
-  a.click();
-  setTimeout(() => URL.revokeObjectURL(a.href), 5000);
-}
-
-
 function exportCSV() {
   if (!responses.length) { toast('Brak danych'); return; }
   const qs = QUESTIONS.filter(q => q.type !== 'section');
@@ -1641,6 +1566,7 @@ function toast(msg) {
 // ════════════════════════════════════════════════════════
 
 renderForm();
+updateRespCount();
 </script>
 </body>
 </html>
